objects/TimeCard__c.object
<CustomObject>
    <label>TimeCard</label>
    <nameField>
        <displayFormat>TIME_CARD-{0000}</displayFormat>
        <label>TimeCard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any comments on the timecard, entered by the consultant</description>
        <inlineHelpText>Any comments on the timecard, entered by the consultant</inlineHelpText>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Saved, Submitted, or Approved</description>
        <inlineHelpText>Saved, Submitted, or Approved</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>TimeCards</relationshipLabel>
        <relationshipName>TimeCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, hours in this timecard are billable</description>
        <inlineHelpText>If true, hours in this timecard are billable</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this timecard has been invoiced</description>
        <inlineHelpText>If true, this timecard has been invoiced</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>TimeCards</relationshipLabel>
        <relationshipName>TimeCards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Sunday_Hours__c +  Monday_Hours__c +  Tuesday_Hours__c +  Wednesday_Hours__c  +  Thursday_Hours__c +  Friday_Hours__c + Saturday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <description>Last day in the week recorded by this Timecard(a Saturday)</description>
        <inlineHelpText>Last day in the week recorded by this Timecard(a Saturday)</inlineHelpText>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <description>Hours worked on friday</description>
        <inlineHelpText>Hours worked on friday</inlineHelpText>
        <label>Friday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Date timecard was invoiced</description>
        <inlineHelpText>Date timecard was invoiced</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <description>Hours worked on monday</description>
        <inlineHelpText>Hours worked on monday</inlineHelpText>
        <label>Monday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <description>Hours worked on sunday</description>
        <inlineHelpText>Hours worked on sunday</inlineHelpText>
        <label>Sunday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <description>Hours worked on tuesday</description>
        <inlineHelpText>Hours worked on tuesday</inlineHelpText>
        <label>Tuesday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice number associated with this timecard</description>
        <inlineHelpText>Invoice number associated with this timecard</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <description>Hours worked on saturday</description>
        <inlineHelpText>Hours worked on saturday</inlineHelpText>
        <label>Saturday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <description>Hours worked on thursday</description>
        <inlineHelpText>Hours worked on thursday</inlineHelpText>
        <label>Thursday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <description>Hours worked on wednesday</description>
        <inlineHelpText>Hours worked on wednesday</inlineHelpText>
        <label>Wednesday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>